# acatome-extract

./: CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
docs/: pdf-enrichment-usage.md
src/acatome_extract/: __init__.py  am.py  bundle.py  chunker.py  cli.py  enrich.py  ids.py  marker.py  opener.py  pdf_metadata.py  pipeline.py  watch.py
tests/: conftest.py  test_bundle.py  test_chunker.py  test_enrich.py  test_figures.py  test_gpu_embed.py  test_ids.py  test_marker.py  test_migrate.py  test_pdf_metadata.py  test_prompt_safety.py  test_watch.py
