[project]
name = "acatome-extract"
version = "0.1.0"
description = "PDF extraction pipeline for scientific papers"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{name = "Reto Stamm", email = "reto@retostamm.com"}]
readme = "README.md"
keywords = ["pdf", "extraction", "scientific-papers", "nlp", "summarization", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/acatome/acatome-extract"
Repository = "https://github.com/acatome/acatome-extract"
Issues = "https://github.com/acatome/acatome-extract/issues"

dependencies = [
    "acatome-meta>=0.1.0",
    "marker-pdf>=1.0",
    "typer>=0.12",
    "litellm>=1.40",
    "watchdog>=4.0",
]

[project.optional-dependencies]
store = [
    "acatome-store>=0.1.0",
]
embeddings = [
    "sentence-transformers>=3.0",
]
gpu = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
grobid = [
    "grobid-client-python>=0.0.7",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
acatome-extract = "acatome_extract.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_extract"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
