[project]
name = "acatome-extract"
version = "0.3.1"
description = "PDF extraction pipeline for scientific papers"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{name = "Reto Stamm", email = "reto@retostamm.com"}]
readme = "README.md"
keywords = ["pdf", "extraction", "scientific-papers", "nlp", "summarization", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "acatome-meta>=0.1.0",
    "marker-pdf>=1.0; sys_platform != 'win32'",
    "pymupdf>=1.24",
    "precis-summary>=0.1.0",
    "typer>=0.12",
    "litellm>=1.40,!=1.82.7,!=1.82.8",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/acatome/acatome-extract"
Repository = "https://github.com/acatome/acatome-extract"
Issues = "https://github.com/acatome/acatome-extract/issues"

[project.optional-dependencies]
marker = [
    "marker-pdf>=1.0",
]
store = [
    "acatome-store>=0.1.0",
]
embeddings = [
    "sentence-transformers>=3.0",
]
gpu = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
full = [
    "acatome-extract[marker,embeddings,store]",
]
grobid = [
    "grobid-client-python>=0.0.7",
]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

[project.scripts]
acatome-extract = "acatome_extract.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_extract"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.bumpversion]
current_version = "0.3.0"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/acatome_extract/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
