[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acatome-extract"
version = "0.3.1"
description = "PDF extraction pipeline for scientific papers"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "Reto Stamm", email = "reto@retostamm.com" }]
keywords = ["pdf", "extraction", "scientific-papers", "nlp", "summarization", "embeddings"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "acatome-meta>=0.1.0",
    "marker-pdf>=1.0; sys_platform != 'win32'",
    "pymupdf>=1.24",
    "precis-summary>=0.1.0",
    "typer>=0.12",
    "litellm>=1.40,!=1.82.7,!=1.82.8",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/retospect/acatome-extract"
Repository = "https://github.com/retospect/acatome-extract"

[project.optional-dependencies]
marker = ["marker-pdf>=1.0"]
store = ["acatome-store>=0.1.0"]
embeddings = ["sentence-transformers>=3.0"]
gpu = ["sentence-transformers>=3.0", "torch>=2.0"]
full = ["acatome-extract[marker,embeddings,store]"]
grobid = ["grobid-client-python>=0.0.7"]

[project.scripts]
acatome-extract = "acatome_extract.cli:app"
am = "acatome_extract.am:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acatome_extract"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
